[package]
name = "ednaldo"
version = "0.1.3"
description = "Mostra uma imagem clássica aleatória do Ednaldo Pereira"
authors = ["Michell Ocaña <ocana.1997@hotmail.com>"]
repository = "https://github.com/michellocana/ednaldo"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"
include = ["src/**/*", "Cargo.toml", "images/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "1.0.0-beta1"
image = "0.23.4"
colored = "2"
rand = "0.7.3"
reqwest = "0.10"
tokio = { version = "0.2", features = [ "fs",  "macros"] }
